--- a/requirements.txt
+++ b/requirements.txt
@@ -4,13 +4,13 @@ certifi==2020.12.5
 chardet==4.0.0
 dj-database-url==0.5.0
 Django==3.2
+django-heroku==0.3.1
 folium==0.12.1
 gunicorn==20.1.0
 idna==2.10
 Jinja2==2.11.3
 MarkupSafe==1.1.1
 numpy==1.19.5
-psycopg2==2.7.4
 python-decouple==3.4
 pytz==2021.1
 requests==2.25.1
