--- a/requirements.txt
+++ b/requirements.txt
@@ -11,6 +11,7 @@ idna==2.10
 Jinja2==2.11.3
 MarkupSafe==1.1.1
 numpy==1.19.5
+psycopg2==2.6.2
 python-decouple==3.4
 pytz==2021.1
 requests==2.25.1
