--- a/requirements.txt
+++ b/requirements.txt
@@ -1,21 +1,16 @@
+-f /usr/share/pip-wheels
 asgiref==3.3.4
 branca==0.4.2
 certifi==2020.12.5
 chardet==4.0.0
-dj-database-url==0.5.0
-Django==3.2
-django-heroku==0.3.1
+Django==3.2.3
 folium==0.12.1
-gunicorn==20.1.0
 idna==2.10
-Jinja2==2.11.3
-MarkupSafe==1.1.1
-numpy==1.19.5
-psycopg2==2.7.1
-python-decouple==3.4
+Jinja2==3.0.0
+MarkupSafe==2.0.0
+numpy==1.20.3
+PyMySQL==1.0.2
 pytz==2021.1
 requests==2.25.1
 sqlparse==0.4.1
-typing-extensions==3.10.0.0
 urllib3==1.26.4
-whitenoise==5.2.0
