--- a/.gitignore
+++ b/.gitignore
@@ -1,3 +1,9 @@
 .whymexEnv/
-WhyMex/__pycache__/
-posts/__pycache__/
+WhyMex/__pycache__/__init__.cpython-36.pyc
+WhyMex/__pycache__/settings.cpython-36.pyc
+WhyMex/__pycache__/wsgi.cpython-36.pyc
+posts/__pycache__/views.cpython-36.pyc
+
+../WhyMex/__pycache__/wsgi.cpython-36.pyc
+__pycache__/
+../WhyMex/__pycache__/*
