--- a/.gitignore
+++ b/.gitignore
@@ -1,6 +1,6 @@
 .whymexEnv/
 local_settings.py
-credentials.json
+.env
 ../WhyMex/__pycache__/wsgi.cpython-36.pyc
 __pycache__/
 ../WhyMex/__pycache__/*
