--- a/requirements.txt
+++ b/requirements.txt
@@ -10,6 +10,7 @@ Jinja2==3.0.0
 MarkupSafe==2.0.0
 numpy==1.20.3
 PyMySQL==1.0.2
+python-dotenv==0.17.1
 pytz==2021.1
 requests==2.25.1
 sqlparse==0.4.1
